@@ -1,6 +1,8 @@
 2013-03-05  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
     * Whitespace does not break a parenthesized variable name
+    * Whitespace is stripped from if conditions
+    * The condition of an if must be a valid variable name
 
 2013-03-01  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
